--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 	path = segmentation
 	url = git@github.com:mhlabCodingTeam/segmentation.git
 	branch = master
+[submodule "active"]
+	path = active
+	url = git@github.com:mhlabCodingTeam/active.git
+	branch = dev
