--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "auxiliaryMethods"]
 	path = auxiliaryMethods
-	url = https://github.com/mhlabCodingTeam/auxiliaryMethods.git
+	url = https://gitlab.mpcdf.mpg.de/connectomics/auxiliaryMethods.git
 [submodule "CNN"]
 	path = CNN
 	url = https://github.com/mhlabCodingTeam/CNN.git
