Pull CNN from GitLAB as well

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://gitlab.mpcdf.mpg.de/connectomics/auxiliaryMethods.git
 [submodule "CNN"]
 	path = CNN
-	url = https://github.com/mhlabCodingTeam/CNN.git
+	url = https://gitlab.mpcdf.mpg.de/connectomics/CNN.git
