--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "auxiliaryMethods"]
 	path = auxiliaryMethods
-	url = git@gitlab.mpcdf.mpg.de:connectomics/auxiliaryMethods.git
+	url = https://gitlab.mpcdf.mpg.de/connectomics/auxiliaryMethods.git
 [submodule "CNN"]
 	path = CNN
-	url = git@gitlab.mpcdf.mpg.de:connectomics/CNN.git
+	url = https://gitlab.mpcdf.mpg.de/connectomics/CNN.git
