Scripts must be YAML string arrays

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 before_script:
-  submodule update --init --recursive 
+  - submodule update --init --recursive 
 
 tests:
   script:
-    matlab -nosplash -nodisplay -r "runAllTests();"
+    - matlab -nosplash -nodisplay -r "runAllTests();"
