--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 before_script:
+  - mkdir -p ~/.ssh
   - echo -e "Host gitlab.mpcdf.mpg.de\n IdentityFile /etc/matlab-runner/id_rsa" > ~/.ssh/config
   - echo -e "[url \"git@gitlab.mpcdf.mpg.de:\"]\n insteadOf = \"https://gitlab.mpcdf.mpg.de/\"" > ~/.gitconfig
   - git submodule update --init --recursive 
