--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "CNN"]
 	path = CNN
 	url = git@gitlab.mpcdf.mpg.de:connectomics/CNN.git
+[submodule "Benedikt"]
+	path = Benedikt
+	url = git@gitlab.mpcdf.mpg.de:connectomics/Benedikt.git
